# finutils

./: .gitignore  README.md  pyproject.toml  tvm.py
.pytest_cache/: .gitignore
.pytest_cache/v/cache/: lastfailed  nodeids
src/finutils/: __init__.py  tvm.py
src/finutils.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_tvm.py
